[project]
name = "info-scraper-rss"
version = "0.1.0"
description = "RSS feed generator for Tsinghua University Info Portal"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "feedgenerator>=2.1.0",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
explore = ["playwright>=1.40.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
